Fix Nombre no aparecia :rocket: